[package]
name = "backtraceio"
description = "Backtrace I/O error reporting for Rust applications"
version = "0.2.0"
authors = ["KrzaQ <krzaq@krzaq.cc>", "Will Andrews <will@firepipe.net>"]
readme = "README.md"
edition = "2018"

[dependencies]
backtrace = "0.3"
rustc_version_runtime = "0.2"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
